fix(select): multiselect spacing fix.

--- a/packages/assets/css/src/scss/_components/_select/_modifiers/_select-size.scss
+++ b/packages/assets/css/src/scss/_components/_select/_modifiers/_select-size.scss
@@ -85,6 +85,12 @@
 						height: $select-checkbox-size-sm;
 					}
 				}
+
+				.sui-dropdown__popover--#{$block}-checkbox {
+					.sui-dropdown__menu-item {
+						padding: $spacing-sm $spacing-lg;
+					}
+				}
 			}
 		}
 	}
